fixed spacing added anda dded 3 more attractions

--- a/WayneSociety_Project/static/css/Attractions.css
+++ b/WayneSociety_Project/static/css/Attractions.css
@@ -4,6 +4,7 @@ h5 {
 
 .card-deck{
 font:white;
+font-weight: bold;
 opacity:0.75; /* makes the page transparent*/
 width: 33.33%;
 height: 600px;
@@ -15,6 +16,7 @@ overflow-x: hidden;
 overflow-y:auto;
 border: 10px ;
 padding: 0px 0px 0px 30px;
+margin-bottom: 5%;
 }
 
 /*Button Css*/
@@ -36,9 +38,14 @@ button:hover {
 background-color: #96d1ec;
 }
 
+
+/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other 
+instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
 }
-
-
 
 
 
